librdmacm (1.0.10-1) unstable; urgency=low

  * Update to Standards-Version: 3.8.3 (no changes needed).
  * Move -dbg package to section debug.
  * New upstream release:
    - Many small fixes.

 -- Roland Dreier <rolandd@cisco.com>  Wed, 18 Nov 2009 15:04:55 -0800

librdmacm (1.0.8-1) unstable; urgency=low

  * New upstream release:
    - Report address change and timewait exit events (requires 
      kernel 2.6.27).
    - Minor enhancements to example programs.

 -- Roland Dreier <rolandd@cisco.com>  Fri, 08 Aug 2008 14:24:16 -0700

librdmacm (1.0.7-1) unstable; urgency=low

  * New upstream release:
    - Set status correctly for rejects.
    - Add new function rdma_migrate_id().
  * We actually require libibverbs 1.1 (not 1.0) to build.
  * Add debian/watch file.
  * Use DEB_DH_MAKESHLIBS_ARGS_ALL to pass appropriate -V option to
    dh_makeshlibs, since a new symbol rdma_migrate_id() was added in 
    librdmacm 1.0.7.

 -- Roland Dreier <rolandd@cisco.com>  Fri, 28 Mar 2008 20:44:44 -0700

librdmacm (1.0.6-1) unstable; urgency=low

  * Initial Release.  (Closes: #462348)

 -- Roland Dreier <rolandd@cisco.com>  Tue, 05 Feb 2008 13:49:52 -0800