@@ -1,7 +1,7 @@
 Source: librdmacm
 Priority: extra
 Maintainer: Roland Dreier <rolandd@cisco.com>
-Build-Depends: @cdbs@, libibverbs-dev (>= 1.1)
+Build-Depends: autoconf, automake, libtool, debhelper (>= 7.0.50~), dpkg-dev (>= 1.13.19), libibverbs-dev (>= 1.1)
 Standards-Version: 3.8.3
 Section: libs
 Homepage: http://www.openfabrics.org/
