@@ -2,10 +2,11 @@ librdmacm (1.0.10-1) unstable; urgency=low
 
   * Update to Standards-Version: 3.8.3 (no changes needed).
   * Move -dbg package to section debug.
+  * Change build system from cdbs to debhelper 7.
   * New upstream release:
     - Many small fixes.
 
- -- Roland Dreier <rolandd@cisco.com>  Wed, 18 Nov 2009 15:04:55 -0800
+ -- Roland Dreier <rolandd@cisco.com>  Wed, 18 Nov 2009 15:40:14 -0800
 
 librdmacm (1.0.8-1) unstable; urgency=low
 
